Add secret manager, user db and simple login

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,13 @@
     </head>
     <body>
         <h1>Game Server</h1>
+        
+        <div>
+            <input type="text" id="username" placeholder="Username">
+            <input type="password" id="password" placeholder="Password">
+            <button onclick="login()">Login</button>
+        </div>
+        
         <button onclick="start()">Start</button>
 
         <script src="config.js"></script>
