Add game server check to start workflow, improve web page servers

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -96,7 +96,7 @@
                             <th>Game</th>
                             <th>Instance Type</th>
                             <th>Status</th>
-                            <th>Current Task</th>
+                            <th>Task</th>
                             <th style="width: 99%">Actions</th>
                         </tr>
                     </thead>
