Implement displaying last backup

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -108,6 +108,7 @@
                             <th>Instance Type</th>
                             <th>Status</th>
                             <th>Task</th>
+                            <th>Last Backup</th>
                             <th style="width: 99%">Actions</th>
                         </tr>
                     </thead>
