--- a/frontend/index.html
+++ b/frontend/index.html
@@ -143,6 +143,9 @@
                         <div id="createServerMessage" style="margin-left: 10px"></div>
                     </div>
                 </div>
+                <div id="nero" >
+                    <img src="./resource/nero.gif" alt="Loading..." style="width: 120px; height: auto;" />
+                </div>
             </div>
 
             <div id="users" class="page" style="display: none">
