Render server stats

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
                 color: #333;
                 font-family: Sans-serif;
                 font-size: 20;
-                max-width: 800px;
+                max-width: 1000px;
                 margin: auto;
             }
             .row {
@@ -110,9 +110,12 @@
                     <thead style="width: 100%">
                         <tr style="background: #f0f0f0; width: 100%">
                             <th>Name</th>
-                            <th>Instance Type</th>
+                            <th>Type</th>
                             <th>Status</th>
                             <th>Task</th>
+                            <th>IP Address</th>
+                            <th>Player Count</th>
+                            <th>Storage</th>
                             <th>Last Backup</th>
                             <th style="width: 99%">Actions</th>
                         </tr>
