--- a/frontend/index.html
+++ b/frontend/index.html
@@ -133,7 +133,7 @@
                         <select type="text" id="createServerTemplate"></select>
                         <div>Server template</div>
 
-                        <div>Instane Type:</div>
+                        <div>Instance Type:</div>
                         <input type="text" id="createServerInstanceType" value="t3.small" />
                         <div>EC2 instance type</div>
 
